--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: rahuldemo/my-java-gradle-app
+        tags: v1, latest 
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
