--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: win10-laptop #ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -38,7 +38,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6.2
       with:
         image: rahuldemo/my-java-gradle-app
-        tags: v3, latest
+        tags: v4
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
