--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,5 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-    - name: Docker Build & Push Action
-      uses: mr-smithers-excellent/docker-build-push@v6.2
-      with:
-        image: rahuldemo/my-java-gradle-app
-        tags: v4
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Docker Version
+      run: docker --version
