--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,19 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    #- name: Grant execute permission
-     # run: chmod +x gradlew
+    - name: Grant execute permission
+      run: chmod +x gradlew
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-    - name: Docker Version
-      run: docker --version
+    # - name: Docker Version
+    #  run: docker --version
+    - name: Docker Build & Push Action
+      uses: mr-smithers-excellent/docker-build-push@v6.2
+      with:
+        image: rahuldemo/my-java-gradle-app
+        tags: v4
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
