--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest # win10-laptop
+    runs-on: ubuntu_local_laptop # ubuntu-latest # win10-laptop
 
     steps:
     - uses: actions/checkout@v3
@@ -34,13 +34,6 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
-    # - name: Docker Version
-    #  run: docker --version
-    - name: Docker Build & Push Action
-      uses: mr-smithers-excellent/docker-build-push@v6.2
-      with:
-        image: rahuldemo/my-java-gradle-app
-        tags: v4
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Docker Version
+      run: docker --version
+    
