--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,10 @@ jobs:
         distribution: 'temurin'
     - name: Docker Version
       run: docker --version
-    - name: WPM commands
-      run: docker exec -i RAHS_Edge_Runtime_Ubuntu /opt/softwareag/wpm/bin/wpm.sh help >log1.txt
-    - name: PWD
-      run: pwd
+    # notify Microsoft Teams channel with a custom message
+    - uses: aliencube/microsoft-teams-actions@v0.8.0
+      with:
+        webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
+        title: This is a custom message
+        summary: This is a message summary
     
