--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,25 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
-
+name: Microsoft Teams notification
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
+      - develop
+      - master
 
 jobs:
   build:
-
-    runs-on: ubuntu_local_laptop # ubuntu-latest # win10-laptop
-
+    runs-on: ubuntu_local_laptop
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+
+    # notify on each build event like starting and finishing a build
+    - uses: toko-bifrost/ms-teams-deploy-card@master
+      if: always()
       with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Docker Version
-      run: docker --version
-     # notify Microsoft Teams channel with a custom message
+        github-token: ${{ github.token }}
+        webhook-uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
+
+    # notify Microsoft Teams channel with a custom message
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
