--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,17 @@ jobs:
     runs-on: ubuntu_local_laptop
     steps:
     - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+    - name: Docker Version
+      run: docker --version
 
     # notify Microsoft Teams channel with a custom message
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
-        title: This is a custom message
+        title: This is from GitHub Actions - a custom message
         summary: This is a message summary
