--- a/.github/workflows/Container-Stop-Start.yml
+++ b/.github/workflows/Container-Stop-Start.yml
@@ -24,3 +24,9 @@ jobs:
       run: docker start RAHS_POC01_ERT
     - name: Docker Containers after START
       run: docker ps
+      # notify Microsoft Teams channel with a custom message
+    - uses: aliencube/microsoft-teams-actions@v0.8.0
+      with:
+        webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
+        title: This is from GitHub Actions - Edge Runtime stopped and started
+        summary: This is a message summary
