--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           accept: 200,201,204
 
           # Headers can be passed through with a json object string
-          headers: '{"environment":"","sec-ch-ua-mobile":"?0","Connection":"keep-alive", "Content-Type":"application/json", "Accept":"application/json, text/plain, */*", "Accept-Encoding":"gzip, deflate, br","Accept-Language":"en,fr;q=0.9,en-US;q=0.8,es;q=0.7,uk;q=0.6","Cookie":"","Origin":"https://originawsdev1.dev-int-aws-us.webmethods.io","Referer":"https://originawsdev1.dev-int-aws-us.webmethods.io/","Sec-Fetch-Dest":"empty","Sec-Fetch-Mode":"cors","Sec-Fetch-Site":"same-origin","authtoken":"fl3ff07fdf34477632ed077c","environment":"","x-csrf-token":"12762e3b-f6cf-4dfa-84d4-a573d704afcc"}'
+          headers: '{"sec-ch-ua-platform":"`"Windows`"","environment":"","sec-ch-ua-mobile":"?0","Connection":"keep-alive", "Content-Type":"application/json", "Accept":"application/json, text/plain, */*", "Accept-Encoding":"gzip, deflate, br","Accept-Language":"en,fr;q=0.9,en-US;q=0.8,es;q=0.7,uk;q=0.6","Cookie":"","Origin":"https://originawsdev1.dev-int-aws-us.webmethods.io","Referer":"https://originawsdev1.dev-int-aws-us.webmethods.io/","Sec-Fetch-Dest":"empty","Sec-Fetch-Mode":"cors","Sec-Fetch-Site":"same-origin","authtoken":"fl3ff07fdf34477632ed077c","environment":"","x-csrf-token":"12762e3b-f6cf-4dfa-84d4-a573d704afcc"}'
 
           # Params can be passed through with a json object string
          # params: '{ "param1": "value", "param2": "value2" }'
