--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
           # Body request
           # Apply only to POST|PUT request
-          body: '{"name":"RAHS_POC_May0122","description":""}'
+          body: '{"name":"RAHS_POC_May0123","description":"RAHS_POC_May0123"}'
 
           # Request timeout (millisec)
           # Default: 1000
@@ -75,3 +75,6 @@ jobs:
          # custom-config: .github/workflows/curl-config.json
       - name: "Use response"
         run: echo ${{ steps.api.outputs.response }}
+      - uses: actions/checkout@v3
+      - name: Docker Containers
+        run: docker ps
