--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,14 +30,14 @@ jobs:
           accept: 200,201,204
 
           # Headers can be passed through with a json object string
-          headers: '{"User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36","sec-ch-ua-platform":"\"Windows\"","environment":"","sec-ch-ua-mobile":"?0","Connection":"keep-alive", "Content-Type":"application/json", "Accept":"application/json, text/plain, */*", "Accept-Encoding":"gzip, deflate, br","Accept-Language":"en,fr;q=0.9,en-US;q=0.8,es;q=0.7,uk;q=0.6","Cookie":"lang=en; route=1684220764.991.44.546718|58fb03e5a1678771a75dea209604055b; login=; SameSite=Lax; apt.sid=AP-BCBBKBNAYWW6-2-2-1684390015918-95372351; apt.uid=AP-BCBBKBNAYWW6-2-2-1684390015920-91972581.0.2.1f906cf3-12ca-40aa-9b8c-cc50c52f96a7; OAuth_Token_Request_State=a6cc5317-d1f2-4a28-bb97-c722ec25f79b; JSESSIONID=2C6725FAB894E7111032F55CCA9634AE","Origin":"https://originawsdev1.dev-int-aws-us.webmethods.io","Referer":"https://originawsdev1.dev-int-aws-us.webmethods.io/","Sec-Fetch-Dest":"empty","Sec-Fetch-Mode":"cors","Sec-Fetch-Site":"same-origin","authtoken":"flaefd72d68a72795ece43f0","x-csrf-token":"a969e00f-0660-4e6f-83dd-995e5041feb9"}'
+          headers: '{"User-Agent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36","sec-ch-ua-platform":"\"Windows\"","environment":"","sec-ch-ua-mobile":"?0","Connection":"keep-alive", "Content-Type":"application/json", "Accept":"application/json, text/plain, */*", "Accept-Encoding":"gzip, deflate, br","Accept-Language":"en,fr;q=0.9,en-US;q=0.8,es;q=0.7,uk;q=0.6","Cookie":"lang=en; route=1684220764.991.44.546718|58fb03e5a1678771a75dea209604055b; login=; SameSite=Lax; apt.uid=AP-BCBBKBNAYWW6-2-2-1684390015920-91972581.0.2.1f906cf3-12ca-40aa-9b8c-cc50c52f96a7; apt.sid=AP-BCBBKBNAYWW6-2-2-1684730088065-68966786; OAuth_Token_Request_State=b03a473e-d807-43bc-92c8-2816ed18dedc; JSESSIONID=663A279633E41AF6220AE38CF1487A2F","Origin":"https://originawsdev1.dev-int-aws-us.webmethods.io","Referer":"https://originawsdev1.dev-int-aws-us.webmethods.io/","Sec-Fetch-Dest":"empty","Sec-Fetch-Mode":"cors","Sec-Fetch-Site":"same-origin","authtoken":"flb130513be080da1b37c56f","x-csrf-token":"de9bbfb6-0ea7-41be-a68d-f1401d059508"}'
           
           # Params can be passed through with a json object string
          # params: '{ "param1": "value", "param2": "value2" }'
 
           # Body request
           # Apply only to POST|PUT request
-          body: '{"name":"RAHS_POC_May0135","description":"RAHS_POC_May0123"}'
+          body: '{"name":"RAHS_MayPOC04","description":"RAHS_POC_May0123"}'
 
           # Request timeout (millisec)
           # Default: 1000
