--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-windows-runner
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    # notify on each build event like starting and finishing a build
+    - uses: toko-bifrost/ms-teams-deploy-card@master
+      if: always()
       with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Docker Containers
-      run: docker ps -a
+        github-token: ${{ github.token }}
+        webhook-uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
     # notify Microsoft Teams channel with a custom message
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
