--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
           # Body request
           # Apply only to POST|PUT request
-          body: '{"name":"RAHS_ERT_CICD_POC002","description":""}'
+          body: '{"name":"RAHS_ERT_CICD_POC003","description":""}'
 
           # Request timeout (millisec)
           # Default: 1000
@@ -77,5 +77,5 @@ jobs:
         run: echo '${{ fromJson(steps.api.outputs.response).data['name'] }}'
       - uses: actions/checkout@v3
       - name: Docker Containers
-        run: docker run -p 5599:5555 -d -e SAG_IS_CLOUD_REGISTER_URL=https://originawsdev1.dev-int-aws-us.webmethods.io -e SAG_IS_EDGE_TENANT_ID=originawsdev1 -e SAG_IS_EDGE_CLOUD_ALIAS=${{ fromJson(steps.api.outputs.response).data['name'] }} -e SAG_IS_CLOUD_REGISTER_TOKEN=${{ fromJson(steps.api.outputs.response).data['code'] }} --name=${{ fromJson(steps.api.outputs.response).data['name'] }} iregistry.eur.ad.sag/origin/webmethods-edge-runtime:latest
+        run: docker run -p 5555:5555 -d -e SAG_IS_CLOUD_REGISTER_URL=https://wmintanywhere.int-aw-au.webmethods.io -e SAG_IS_EDGE_TENANT_ID=wmintanywhere -e SAG_IS_EDGE_CLOUD_ALIAS=${{ fromJson(steps.api.outputs.response).data['name'] }} -e SAG_IS_CLOUD_REGISTER_TOKEN=${{ fromJson(steps.api.outputs.response).data['code'] }} --name=${{ fromJson(steps.api.outputs.response).data['name'] }} iregistry.eur.ad.sag/origin/webmethods-edge-runtime:latest
         #run: docker ps
