--- a/.github/workflows/MS_Teams_Notification.yml
+++ b/.github/workflows/MS_Teams_Notification.yml
@@ -20,5 +20,5 @@ jobs:
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
-        title: This is from GitHub Actions "A custom message"
+        title: This is from GitHub Actions workflow "A custom message"
         summary: This is a message summary
