--- a/.github/workflows/Container-Stop-Start.yml
+++ b/.github/workflows/Container-Stop-Start.yml
@@ -29,5 +29,5 @@ jobs:
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
-        title: This is from GitHub Actions - Edge Runtime stopped and started
+        title: This is from GitHub Actions - Edge Runtime - ${{ inputs.EdgeRuntime }} - stopped and started.
         summary: This is a message summary
