--- a/.github/workflows/MS-Teams-Notification-Sequential.yml
+++ b/.github/workflows/MS-Teams-Notification-Sequential.yml
@@ -1,4 +1,4 @@
-name: Microsoft Teams notification Sequential
+name: Microsoft-Teams-notification-Sequential
 on:
   push:
     branches: [ "master" ]
