--- a/.github/workflows/Container-Stop-Start-Sequential.yml
+++ b/.github/workflows/Container-Stop-Start-Sequential.yml
@@ -29,16 +29,16 @@ jobs:
     - name: Docker Containers
       run: docker ps
     - name: Docker Container Stop
-      run: docker stop RAHS_Git_POC_ERT_June0011001
+      run: docker stop ${{ steps.all.outputs.EDGE-RUNTIME_LIST }}
     - name: Docker Containers after STOP
       run: docker ps
     - name: Docker Container Start
-      run: docker start RAHS_Git_POC_ERT_June0011001
+      run: docker start ${{ steps.all.outputs.EDGE-RUNTIME_LIST }}
     - name: Docker Containers after START
       run: docker ps
       # notify Microsoft Teams channel with a custom message
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
-        title: This is from GitHub Actions - Edge Runtime - RAHS_Git_POC_ERT_June0011001 - stopped and started.
+        title: This is from GitHub Actions - Edge Runtime - ${{ steps.all.outputs.EDGE-RUNTIME_LIST }} - stopped and started.
         summary: This is a message summary
