--- a/.github/workflows/Container-Stop-Start-Sequential.yml
+++ b/.github/workflows/Container-Stop-Start-Sequential.yml
@@ -22,29 +22,29 @@ jobs:
       with:
         file: ./app/src/main/resources/edgeruntime.properties
         all: true
-
-    - run: echo ${{ steps.all.outputs.EDGE-RUNTIME_LIST }} # ERT names from a property file
+    - run: echo ${{ steps.all.outputs.EDGE_RUNTIME_LIST }} # ERT names from a property file
+  
     - name: Mendax Loop through numbers
       id: loop
       run: |
-          for i in 1 2 3 4 5
+          for etrStr in ${{ fromJson(steps.all.outputs.EDGE_RUNTIME_LIST) }}
           do
-            echo "Mendax Current number: $i"
+            echo "Mendax Current number: $etrStr"
           done
     - uses: actions/checkout@v3
     - name: Docker Containers
       run: docker ps
     - name: Docker Container Stop
-      run: docker stop ${{ steps.all.outputs.EDGE-RUNTIME_LIST }}
+      run: docker stop RAHS_Git_POC_ERT_June0011001
     - name: Docker Containers after STOP
       run: docker ps
     - name: Docker Container Start
-      run: docker start ${{ steps.all.outputs.EDGE-RUNTIME_LIST }}
+      run: docker start RAHS_Git_POC_ERT_June0011001
     - name: Docker Containers after START
       run: docker ps
       # notify Microsoft Teams channel with a custom message
     - uses: aliencube/microsoft-teams-actions@v0.8.0
       with:
         webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
-        title: This is from GitHub Actions - Edge Runtime - ${{ steps.all.outputs.EDGE-RUNTIME_LIST }} - stopped and started.
+        title: This is from GitHub Actions - Edge Runtime - RAHS_Git_POC_ERT_June0011001 - stopped and started.
         summary: This is a message summary
