--- a/.github/workflows/Container-Stop-Start-Sequential.yml
+++ b/.github/workflows/Container-Stop-Start-Sequential.yml
@@ -22,7 +22,23 @@ jobs:
       run: |
           for etrStr in ${{ steps.all.outputs.EDGE_RUNTIME_LIST }}
           do
-          echo "Mendax Current number: $etrStr"
+          - uses: actions/checkout@v3
+            - name: Docker Containers
+              run: docker ps
+            - name: Docker Container Stop
+              run: docker stop $etrStr
+            - name: Docker Containers after STOP
+              run: docker ps
+            - name: Docker Container Start
+            run: docker start $etrStr
+          - name: Docker Containers after START
+            run: docker ps
+            # notify Microsoft Teams channel with a custom message
+          - uses: aliencube/microsoft-teams-actions@v0.8.0
+            with:
+              webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
+              title: This is from GitHub Actions - Edge Runtime - $etrStr - stopped and started.
+              summary: This is a message summary
             
           done
     
