--- a/.github/workflows/Container-Stop-Start-Sequential.yml
+++ b/.github/workflows/Container-Stop-Start-Sequential.yml
@@ -10,11 +10,8 @@ on:
 
       - completed
 jobs:
-
   ERT_STOP_START:
-
     runs-on: ubuntu-windows-runner
-
     steps:
     - uses: actions/checkout@v3
     - uses: madhead/read-java-properties@latest
@@ -35,3 +32,13 @@ jobs:
           docker start $etrStr
           docker ps
           done
+  ERT_STOP_START-NOTIFICATION:
+    runs-on: ubuntu-windows-runner
+    needs: ERT_STOP_START
+    steps:
+    # notify Microsoft Teams channel with a custom message
+    - uses: aliencube/microsoft-teams-actions@v0.8.0
+      with:
+        webhook_uri: ${{ secrets.MICROSOFT_TEAMS_WEBHOOK_URI }}
+        title: This is from GitHub Actions workflow "Edge Runtime Refresh Successfull"
+        summary: This is a message summary 
