--- a/app/src/main/resources/edgeruntime.properties
+++ b/app/src/main/resources/edgeruntime.properties
@@ -1,1 +1,2 @@
+# Enter multiple Edge Runtime separated by SPACE. And write Edge Runtime name inside ‘’. e.g. ‘your-edge-runitme’
 EDGE_RUNTIME_LIST='RAHS_Git_POC_ERT_June0011001' 'RAHS_Git_POC_ERT_June0011001'
